Change from GIFs to MP4s

--- a/index.html
+++ b/index.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Christmas List</title>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Christmas Wishlist 2024</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="page-container">
-
-  <div class="central-container">
-    <img id="central-image" src="images/blank-vestaboard.jpg" alt="Vestaboard Central Image">
-    <div class="info-box">
-      <h2 id="item-title"></h2>
-      <p id="item-description"></p>
+  <header>
+    <h1>Christmas Wishlist 2024</h1>
+  </header>
+  <main>
+    <div class="content">
+      <div id="main-display">
+        <!-- Preload enabled on the central video element -->
+        <video id="central-video" autoplay playsinline muted preload="auto" poster="images/_empty.jpg">
+          <source src="" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <div id="item-details">
+          <h2 id="item-title">Select an item</h2>
+          <p id="item-description">Click on a thumbnail to see more details.</p>
+        </div>
+      </div>
+      <div id="thumbnail-gallery"></div>
     </div>
-  </div>
-
-  <div class="thumbnails-container">
-    <!-- Thumbnails will match the data-index of the items array -->
-    <!-- Example with a few items -->
-    <div class="thumbnail" data-index="0">
-      <img src="images/item1-thumb.jpg" alt="Item 1 Thumbnail">
-    </div>
-    <div class="thumbnail" data-index="1">
-      <img src="images/item2-thumb.jpg" alt="Item 2 Thumbnail">
-    </div>
-    <!-- Add more as needed -->
-  </div>
-
-</div>
-
-<script src="script.js"></script>
+  </main>
+  <footer>
+    <p>© 2024 Christmas Wishlist by [Your Name]</p>
+  </footer>
+  <script type="module" src="script.js" defer></script>
 </body>
 </html>
