All basic navigation functionality between items

--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Christmas Wishlist 2024</title>
+  <meta property="og:title" content="Dan's Christmas List 2024">
+  <meta property="og:description" content="Explore Dan's curated Christmas Wishlist for 2024, featuring gadgets, art, and more.">
+  <meta property="og:image" content="images/_preview.jpg">
+  <meta property="og:url" content="https://www.instagram.com/danbretl">
+  <meta name="twitter:card" content="summary_large_image">  
+  <title>Dan's Christmas List 2024</title>
   <link rel="stylesheet" href="styles.css">
+  
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="manifest" href="images/site.webmanifest">
 </head>
 <body>
   <header>
-    <h1>Christmas Wishlist 2024</h1>
+    <h1>Dan's Christmas List 2024</h1>
   </header>
   <main>
     <div class="content">
@@ -27,7 +39,7 @@
     </div>
   </main>
   <footer>
-    <p>© 2024 Christmas Wishlist by [Your Name]</p>
+    <p><em>This site was a collaboration between <a href="https://www.instagram.com/danbretl">Dan Bretl</a> and <a href="https://chatgpt.com/">ChatGPT</a></em></p>
   </footer>
   <script type="module" src="script.js" defer></script>
 </body>
