--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
   <meta name="twitter:card" content="summary_large_image">  
   <title>Dan's Christmas List 2024</title>
   <link rel="stylesheet" href="styles.css">
-  
-  <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
@@ -25,13 +23,12 @@
   <main>
     <div class="content">
       <div id="main-display">
-        <!-- Preload enabled on the central video element -->
         <video id="central-video" autoplay playsinline muted preload="auto" poster="images/_empty.jpg">
           <source src="" type="video/mp4">
           Your browser does not support the video tag.
         </video>
         <div id="item-details">
-          <h2 id="item-title">Select an item</h2>
+          <h2 id="item-title"><a id="item-title-link" href="#" target="_blank" rel="noopener noreferrer">Select an item</a></h2>
           <p id="item-description">Click on a thumbnail to see more details.</p>
         </div>
       </div>
