Relative paths attempted fix to work local and remote

--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
   <meta property="og:title" content="Dan's Christmas List 2024">
   <meta property="og:description" content="Explore Dan's curated Christmas Wishlist for 2024, featuring gadgets, art, and more.">
   <meta property="og:image" content="images/_preview.jpg">
-  <meta property="og:url" content="https://www.instagram.com/danbretl">
+  <meta property="og:url" content="https://danbretl.github.io/christmas2024/">
   <meta name="twitter:card" content="summary_large_image">  
   <title>Dan's Christmas List 2024</title>
   <link rel="stylesheet" href="styles.css">
-  
-  <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
@@ -25,7 +23,6 @@
   <main>
     <div class="content">
       <div id="main-display">
-        <!-- Preload enabled on the central video element -->
         <video id="central-video" autoplay playsinline muted preload="auto" poster="images/_empty.jpg">
           <source src="" type="video/mp4">
           Your browser does not support the video tag.
