Try removing underscore on placeholder image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main>
     <div class="content">
       <div id="main-display">
-        <video id="central-video" autoplay playsinline muted preload="auto" poster="images/_empty.jpg">
+        <video id="central-video" autoplay playsinline muted preload="auto" poster="images/empty.jpg">
           <source src="" type="video/mp4">
           Your browser does not support the video tag.
         </video>
