Change initial prompt and randomize the order of items

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           Your browser does not support the video tag.
         </video>
         <div id="item-details">
-          <h2 id="item-title"><a id="item-title-link" href="#" target="_blank" rel="noopener noreferrer">Select an item</a></h2>
+          <h2 id="item-title"><a id="item-title-link" href="#" target="_blank" rel="noopener noreferrer">Select an item from the list below (in no particular order)</a></h2>
           <p id="item-description">Click on a thumbnail to see more details.</p>
         </div>
       </div>
